# public

arm/: stm32f401re.ioc  stm32l475vg.ioc
arm/custom/discovery-stm32l475/: Makefile
arm/custom/include/: command.h
arm/custom/nucleof401re/: Makefile
arm/discovery-stm32l475/: .mxproject  Makefile  STM32L475VGTx_FLASH.ld
arm/discovery-stm32l475/Inc/: FreeRTOSConfig.h  main.h  (+3 more)
arm/nucleof401re/: .mxproject  Makefile  STM32F401RETx_FLASH.ld
bodyTemperature/: build.gradle
demo/: HELP.md  SSL_certificate.txt  build.gradle
esp32/sample/gatt-sample/main/: CMakeLists.txt  Kconfig.projbuild  main.c
gnu/nosql/: readme.txt
gnu/sql/: readme.txt
gnu/threadframe/: build.txt  doxyfile  test-hdr.c  test-hdr.cpp  test.c  test.cpp  threadframe.cpp  threadframe.h
gnu/zigbee/: readme.txt
java/bodyTemperature/: build.gradle  settings.gradle
nodejs/: httpAccessor.js  package.json  test-util.js  util.js
nodejs/tcp/: tcp-client.js
nodejs/ws/: wss-client.js  wss-server.js
odroid-xu/: readme.txt
python/: exec_awsmfa.py  exec_otp.py  exec_sql.py  test_http.py  test_sql.py
python/awsmfa/: libawsmfa.py
python/escape/: escape.py  test.py
python/httputil/: httputil.py
python/otp/: libotp.py
python/proc/: prcctrl.py  test.py
python/qr/: qr.py
python/sql/: sqlutil.py
python/util/: test-escape.py  util.py
shell/: watch-file-ts.sh
tls-lib/: readme.txt
tls-lib/include/: lib-event.h
tls-lib/source/: lib-event.cpp  lib-tls.cpp
tls-lib/test/: makefile_client  makefile_client_cygwin  makefile_server  makefile_server_with_uds_cygwin  test-server.cpp
(+229 files in other folders)
