idf_component_register(SRCS "main.c" "../../gatt-server/main/gattserver-sample.cpp" "../../gatt-client/main/gattclient-sample.cpp" "../../../framework/source/framework.cpp" "../../../ble/gap/gap.cpp" "../../../ble/gatt-server/gattserver.cpp" "../../../ble/gatt-client/gattclient.cpp"
                    INCLUDE_DIRS "." "../../../framework/include" "../../../ble/gap/" "../../../ble/gatt-server/" "../../../ble/gatt-client/")
